--- a/events.html
+++ b/events.html
@@ -65,13 +65,33 @@
 			</div>
 		</ul>
     </nav>
-
-
     <div class="row">
-	    <div class="col-md-6">
-            <h1 id="eventsHeader">Events</h1>
+        <div class="offset-4">
+		</div>
+        <div class="col-md-4">
+            <br>
+            <h1 id="alignCenter">Events</h1>
             <br><br>
-            <div class="container">
+        </div>
+        <div class="offset-4">
+		</div>
+    </div>
+    <div class="row">
+        <div class="offset-2">
+		</div>
+	    <div class="col-md-8" id="alignCenter" >
+            <img src="stayHome.jpg" alt="420" width="600px" height="400px"/>
+        </div>
+        <div class="offset-2">
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="row">
+        <div class="offset-2">
+        </div>
+        <div class="col-md-3">
+            <div id="alignCenter">
                 <div class="row">
                     <div class="span12">
                         <table class="table-condensed table-bordered table-striped">
@@ -147,14 +167,9 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-	    <div class="col-md-6">
-            <img id="stayHome" src="stayHome.jpg" alt="420" width="500px" height="350px"/>
+        <div class="offset-1">
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-5">
             <a href="#" class="list-group-item list-group-item-action active">
             <b>Event List</b>
             </a>
@@ -163,17 +178,20 @@
             <a href="#" class="list-group-item list-group-item-action">...</a>
             <a href="#" class="list-group-item list-group-item-action disabled">...</a>
         </div>
+        <div class="offset-1">
+		</div>
     </div>
+    <br><br>
     <div divclass="row" id="footer">
-        <div class="col-md-12">
-            <div class="footer-copyright text-center py-3">© 2020 Copyright:
-                <a href="https://google.gr/"> Νikiforos_Ιoannidis.com</a>
+            <div class="col-md-12">
+                <div class="footer-copyright text-center py-3">© 2020 Copyright:
+                    <a href="https://google.gr/"> Νikiforos_Ιoannidis.com</a>
+                </div>
+                <script src="donation.js"></script>
+                <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
             </div>
-            <script src="donation.js"></script>
-            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        </div>
     </div>
 </body>
 </html>
