--- a/about_usGr.html
+++ b/about_usGr.html
@@ -66,24 +66,24 @@
 		</ul>
 	</nav>
 	<div class="row">
-		<div class="col-md-2" id="nonProfit">
-			<img src="non-profit.png" id="nonProfit" width="550px" height="500px" />
-		</div>
-		<div class="offset-4">
+		<div class="offset-1">
 		</div>
 		<div class="col-md-4" id="aboutUs">
 			<h1 id="alighCenter">Σχετικά με εμάς</h1>
 			<br>
 			<div>
-				<h4><i>"Είμαστε ένας μη κερδοσκοπικός οργανισμός και προσπαθούμε να συλλέξουμε πόρους για ανρθώπους που βρίσκονται σε ανάγκη!"</i></h4>
+				<h4><i>""Είμαστε ένας μη κερδοσκοπικός οργανισμός και προσπαθούμε να συλλέξουμε πόρους για ανρθώπους που βρίσκονται σε ανάγκη!"</i></h4>
 				<p id="alignCenter">
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ac ligula luctus, varius enim id, vestibulum nisi. Phasellus blandit ligula sed leo fringilla, nec lobortis neque sagittis. Nulla nisl ipsum, varius a consequat sed, mollis et justo. Sed rhoncus eros ac mollis dapibus. Mauris sed posuere ex. Pellentesque vulputate, leo at sodales volutpat, odio metus tristique lacus, vel finibus elit lorem vel nibh. Cras aliquam tortor felis, eu eleifend purus molestie et.
 					Ut commodo commodo rhoncus. Pellentesque erat sem, pretium non rutrum ac, eleifend quis est. Mauris viverra elementum ex, nec semper urna blandit in. Mauris euismod sagittis nulla. Pellentesque eu maximus ante. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus gravida velit a facilisis tincidunt. Suspendisse viverra pulvinar tincidunt. Praesent ullamcorper faucibus nibh, id bibendum neque. Cras porttitor ipsum eget blandit dignissim. Sed eget nisi viverra, pretium leo tempus, malesuada turpis. In hac habitasse platea dictumst. In mi odio, pulvinar sit amet nulla eu, pellentesque varius justo. Sed lacinia fermentum ipsum quis pharetra.
 					Vivamus molestie lectus quis tempus aliquet. In quis nunc dui. Nam non ligula in mauris suscipit vestibulum sed eget massa. Morbi egestas lacinia ligula, nec fringilla augue dictum id. Phasellus leo ipsum, venenatis ut dui eget, interdum congue tortor. Cras congue enim orci, sit amet pretium ligula fermentum id. Pellentesque ac fringilla neque. Fusce luctus tortor sit amet nibh consectetur cursus. Quisque leo nibh, ornare lobortis ullamcorper in, feugiat non neque. Etiam eu gravida neque. Nam pharetra arcu aliquam iaculis condimentum.
 				</p>
 			</div>
-			<div class="offset-2">
-			</div>
+		</div>
+		<div class="col-md-1" id="nonProfit">
+			<img src="non-profit.png" id="nonProfit" width="550px" height="500px" />
+		</div>
+		<div class="offset-5">
 		</div>
 	</div>
 <div class="row" id="footer">
