--- a/contact_us.html
+++ b/contact_us.html
@@ -66,17 +66,39 @@
 			</div>
 		</ul>
 	</nav>
+
+
 	<div class="row">
-		<div class="col-md-6">
-	        <h1>Contact us</h1>
-    	    <p><b>Address: </b>Fidipidou 13, Athens</p>
-			<p><b>Phone: </b>2107776565</p>
-			<p><b>Fax: </b>2107776556</p>
+		<div class="offset-4">
+		</div>
+		<div class="col-md-4">
 			<br>
+			<h1 id="alignCenter">Contact us</h1>
+			<br>
+			<p id="alignCenter"><b>Address: </b>Fidipidou 13, Athens</p>
+			<p id="alignCenter"><b>Phone: </b>2107776565</p>
+			<p id="alignCenter"><b>Fax: </b>2107776556</p>
+			<br>
+		</div>
+		<div class="offset-1">
+		</div>
+	</div>
+	<div class="row">
+		<div class="offset-2">
+		</div>
+		<div class="col-md-8" id="alignCenter" >
 			<img src="googleMaps.PNG"/>
 		</div>
-		<div class="col-md-6">
-			<h3>Email form:</h3>
+		<div class="offset-2">
+		</div>
+	</div>
+	<div class="row">
+		<div class="offset-2">
+		</div>
+		<div class="col-md-8">	
+			<br>
+			<h3 id="alignCenter">Email form:</h3>
+			<br>
 			<form>
 				<div class="form-group">
 				<label for="exampleInputEmail1">Email address</label>
@@ -96,7 +118,15 @@
 				</div>
 				<button type="submit" class="btn btn-primary">Submit</button>
 			</form>
-        </div>
+		</div>
+		<div class="offset-2">
+		</div>
+	</div>
+		
+
+
+
+
 	<div class="row">
 		<div class="col-md-12">
 			<div class="footer-copyright text-center py-3">© 2020 Copyright:
