--- a/contact_usGr.html
+++ b/contact_usGr.html
@@ -65,49 +65,70 @@
 			</div>
 		</ul>
 	</nav>
-  <div class="col-md-4">
-    <div id="contactUsHeader">
-      <h1>Επικοινωνία</h1>
-    </div>
-    <div id="contactUsText">
-      <p><b>Διεύθυνση: </b>Φειδιππίδου 13, Αθήνα</p>
-      <p><b>Τηλέφωνο: </b>2107776565</p>
-      <p><b>Φαξ: </b>2107776556</p>
-      <br><br>
-      <h3>Φόρμα επικοινωνίας:</h3>
-      <form>
-        <div class="form-group">
-          <label for="exampleInputEmail1">Ηλεκτρονικό ταχυδρομείο</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ηλεκτρονική διεύθυνση">
-        </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Μήνυμα</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Γράψτε το κείμενο σας εδώ...">
-        </div>
-        <div class="form-group form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Δεν είμαι ρομπότ</label>
-        </div>
-        <div class="form-group form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Στείλε μήνυμα επιβεβαίωσης</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Υποβολή</button>
-      </form>
-    </div>
-    </div>
-		<div class="col-md-6" id="maps">
-      <img src="googleMaps.PNG"/>
-    </div>
+
+	<div class="row">
+		<div class="offset-4">
+		</div>
+		<div class="col-md-4">
+			<br>
+			<h1 id="alignCenter">Επικοινωνία</h1>
+			<br>
+			<p id="alignCenter"><b>Διεύθυνση: </b>Φειδιππίδου 13, Αθήνα</p>
+			<p id="alignCenter"><b>Τηλέφωνο: </b>2107776565</p>
+			<p id="alignCenter"><b>Φαξ: </b>2107776556</p>
+			<br>
+		</div>
+		<div class="offset-1">
+		</div>
+	</div>
+	<div class="row">
+		<div class="offset-2">
+		</div>
+		<div class="col-md-8" id="alignCenter" >
+			<img src="googleMaps.PNG"/>
+		</div>
+		<div class="offset-2">
+		</div>
+	</div>
+	<div class="row">
+		<div class="offset-2">
+		</div>
+		<div class="col-md-8">	
+			<br>
+			<h3 id="alignCenter">Φόρμα επικοινωνίας:</h3>
+			<br>
+			<form>
+			  <div class="form-group">
+				<label for="exampleInputEmail1">Ηλεκτρονικό ταχυδρομείο</label>
+				<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ηλεκτρονική διεύθυνση">
+			  </div>
+			  <div class="form-group">
+				<label for="exampleInputPassword1">Μήνυμα</label>
+				<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Γράψτε το κείμενο σας εδώ...">
+			  </div>
+			  <div class="form-group form-check">
+				<input type="checkbox" class="form-check-input" id="exampleCheck1">
+				<label class="form-check-label" for="exampleCheck1">Δεν είμαι ρομπότ</label>
+			  </div>
+			  <div class="form-group form-check">
+				<input type="checkbox" class="form-check-input" id="exampleCheck1">
+				<label class="form-check-label" for="exampleCheck1">Στείλε μήνυμα επιβεβαίωσης</label>
+			  </div>
+			  <button type="submit" class="btn btn-primary">Υποβολή</button>
+			</form>
+		</div>
+		<div class="offset-2">
+		</div>
+	</div>
 	<div class="row" id="footer">
-		<div class="col-md-12">
-			<div class="footer-copyright text-center py-3">© 2020 Copyright:
-				<a href="https://google.gr/"> Νικηφόρος_Ιωαννίδης.gr</a>
-			</div>
-			<script src="donation.js"></script>
-			<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<div class="col-md-12">
+		<div class="footer-copyright text-center py-3">© 2020 Copyright:
+			<a href="https://google.gr/"> Νικηφόρος_Ιωαννίδης.gr</a>
+		</div>
+		<script src="donation.js"></script>
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	</div>
 </body>
 </html>
