--- a/eventsGr.html
+++ b/eventsGr.html
@@ -65,22 +65,45 @@
             </div>
 		</ul>
 	</nav>
-        <div class="col-md-6">
-            <h1 id="eventsHeader2">Εκδηλώσεις</h1>
+    <div class="row">
+        <div class="offset-4">
+		</div>
+        <div class="col-md-4">
+            <br>
+            <h1 id="alignCenter">Εκδηλώσεις</h1>
             <br><br>
-            <div class="container">
+        </div>
+        <div class="offset-4">
+		</div>
+    </div>
+    <div class="row">
+        <div class="offset-2">
+		</div>
+	    <div class="col-md-8" id="alignCenter" >
+            <img src="stayHome.jpg" alt="420" width="600px" height="400px"/>
+        </div>
+        <div class="offset-2">
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="row">
+        <div class="offset-2">
+        </div>
+        <div class="col-md-3">
+            <div id="alignCenter">
                 <div class="row">
                     <div class="span12">
                         <table class="table-condensed table-bordered table-striped">
                             <thead>
                                 <tr>
-                                  <th colspan="7">
+                                <th colspan="7">
                                     <span class="btn-group">
                                         <a class="btn"><i class="icon-chevron-left"></i></a>
                                         <a class="btn active" id="april">Απρίλιος 2020</a>
                                         <a class="btn"><i class="icon-chevron-right"></i></a>
                                     </span>
-                                  </th>
+                                </th>
                                 </tr>
                                 <tr>
                                     <th>Δε</th>
@@ -143,19 +166,22 @@
                     </div>
                 </div>
             </div>
-
         </div>
-        <img id="stayHome" src="stayHome.jpg" alt="420" width="500px" height="350px"/>
-        <br><br><br><br>
-        <div class="list-group">
+        <div class="offset-1">
+        </div>
+        <div class="col-md-5">
             <a href="#" class="list-group-item list-group-item-action active">
-              <b>Λίστα εκδηλώσεων</b>
+            <b>Λίστα εκδηλώσεων</b>
             </a>
             <a href="#" class="list-group-item list-group-item-action">έως 21/04/20 Μένουμε σπίτι!</a>
             <a href="#" class="list-group-item list-group-item-action">...</a>
             <a href="#" class="list-group-item list-group-item-action">...</a>
             <a href="#" class="list-group-item list-group-item-action disabled">...</a>
         </div>
+        <div class="offset-1">
+		</div>
+    </div>
+    <br><br>   
     <div class="row" id="footer">
     <div class="col-md-12">
         <div class="footer-copyright text-center py-3">© 2020 Copyright:
