--- a/donation_pageGr.html
+++ b/donation_pageGr.html
@@ -64,101 +64,122 @@
 				</div>
 			</div>
 		</ul>
-	</nav>
-  <div class="row "id="pageWallpaper">
-        <div class="col-md-4">
-            <h1 id="giveUsYourHelp2">Κάντε μια δωρεά</h1>
-			<form class="needs-validation" novalidate>
-        <div class="form-row">
-          <div class="col-md-4 mb-3">
-            <label for="validationCustom01">Όνομα</label>
-            <input type="text" class="form-control" id="validationCustom01" value="Πέτρος" required>
-            <div class="valid-feedback">
-              Looks good!
-            </div>
-          </div>
-          <div class="col-md-4 mb-3">
-            <label for="validationCustom02">Επίθετο</label>
-            <input type="text" class="form-control" id="validationCustom02" value="Ιωσήφ" required>
-            <div class="valid-feedback">
-              Looks good!
-            </div>
-          </div>
-          <div class="col-md-4 mb-3">
-            <label for="validationCustomUsername">Ηλεκτρονικό ταχυδρομείο</label>
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <span class="input-group-text" id="inputGroupPrepend">@</span>
-              </div>
-              <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
-              <div class="invalid-feedback">
-                Please choose a username.
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="form-row">
-          <div class="col-md-6 mb-3">
-            <label for="validationCustom03">Ψηφιακός κωδικός τραπέζης</label>
-            <input type="text" class="form-control" id="validationCustom03" required>
-            <div class="invalid-feedback">
-              Please provide a valid city.
-            </div>
-          </div>
-          <div class="col-md-3 mb-3">
-            <label for="validationCustom04">Περιοχή</label>
-            <input type="text" class="form-control" id="validationCustom05" required>
-            <div class="invalid-feedback">
-              Please select a valid state.
-            </div>
-          </div>
-          <div class="col-md-3 mb-3">
-            <label for="validationCustom05">Τ.Κ.</label>
-            <input type="text" class="form-control" id="validationCustom05" required>
-            <div class="invalid-feedback">
-              Please provide a valid zip.
-            </div>
-          </div>
-        </div>
-        <div class="form-group">
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-            <label class="form-check-label" for="invalidCheck">
-              Συμφωνώ με τους όρους
-            </label>
-            <div class="invalid-feedback">
-              You must agree before submitting.
-            </div>
-          </div>
+  </nav>
+  <div class="row">
+    <div class="offset-1">
+		</div>
+    <div class="col-md-10">
+      <div id="alignCenter">
+        <br>
+        <h1 id="alignCenter">Κάντε μια δωρεά</h1>
+        <br>
       </div>
-      <button class="btn btn-primary" type="submit">Υποβολή
-      </form>
-
-              <script>
-              // Example starter JavaScript for disabling form submissions if there are invalid fields
-              (function() {
-                'use strict';
-                window.addEventListener('load', function() {
-                  // Fetch all the forms we want to apply custom Bootstrap validation styles to
-                  var forms = document.getElementsByClassName('needs-validation');
-                  // Loop over them and prevent submission
-                  var validation = Array.prototype.filter.call(forms, function(form) {
-                    form.addEventListener('submit', function(event) {
-                      if (form.checkValidity() === false) {
-                        event.preventDefault();
-                        event.stopPropagation();
-                      }
-                      form.classList.add('was-validated');
-                    }, false);
-                  });
-                }, false);
-              })();
-              </script>
-		</div>
-		<div class="col-md-4">
-			<img id="donationWallpaper" src="donationWallpaper.jpg" width="800" height="570"/>
-		</div>
     </div>
+    <div class="offset-1">
+    </div>
+  </div>
+  <div class="row">
+    <div class="offset-1">
+    </div>
+    <div class="col-md-10">
+      <div id="alignCenter">
+        <img src="donationWallpaper.jpg" width="700" height="500"/>
+      </div>
+    </div>
+    <div class="offset-1">
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="offset-1">
+    </div>
+    <div class="col-md-10">
+      <div id="alignCenter">
+        <form class="needs-validation" novalidate>
+          <div class="form-row">
+            <div class="col-md-4 mb-3">
+              <label for="validationCustom01">Όνομα</label>
+              <input type="text" class="form-control" id="validationCustom01" value="Πέτρος" required>
+              <div class="valid-feedback">
+                Έγκυρο!
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <label for="validationCustom02">Επίθετο</label>
+              <input type="text" class="form-control" id="validationCustom02" value="Στέργιογλου" required>
+              <div class="valid-feedback">
+                Έγκυρο!
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <label for="validationCustomUsername">Email</label>
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text" id="inputGroupPrepend">@</span>
+                </div>
+                <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+                <div class="invalid-feedback">
+                  Παρακαλώ δώστε ένα ψευδόνυμο.
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="col-md-6 mb-3">
+              <label for="validationCustom03">Iban</label>
+              <input type="text" class="form-control" id="validationCustom03" required>
+              <div class="invalid-feedback">
+                Please provide a valid city.
+              </div>
+            </div>
+            <div class="col-md-3 mb-3">
+              <label for="validationCustom04">Περιοχή</label>
+              <input type="text" class="form-control" id="validationCustom05" required>
+              <div class="invalid-feedback">
+              </div>
+            </div>
+            <div class="col-md-3 mb-3">
+              <label for="validationCustom05">Τ.Κ.</label>
+              <input type="text" class="form-control" id="validationCustom05" required>
+              <div class="invalid-feedback">
+                Παρακαλώ γράψτε έναν έγκυρο ταχυδρομικό κώδικα.
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+              <label class="form-check-label" for="invalidCheck">
+                Σωμφωνώ με τους όρους
+              </label>
+              <div class="invalid-feedback">
+                You must agree before submitting.
+              </div>
+            </div>
+        </div>
+        <button class="btn btn-primary" type="submit">Υποβολή
+        </form>
+          <script>
+          // Example starter JavaScript for disabling form submissions if there are invalid fields
+          (function() {
+            'use strict';
+            window.addEventListener('load', function() {
+              // Fetch all the forms we want to apply custom Bootstrap validation styles to
+              var forms = document.getElementsByClassName('needs-validation');
+              // Loop over them and prevent submission
+              var validation = Array.prototype.filter.call(forms, function(form) {
+                form.addEventListener('submit', function(event) {
+                  if (form.checkValidity() === false) {
+                    event.preventDefault();
+                    event.stopPropagation();
+                  }
+                  form.classList.add('was-validated');
+                }, false);
+              });
+            }, false);
+          })();
+          </script>
+		</div>
     <div class="row" id="footer">
       <div class="col-md-12">
         <div class="footer-copyright text-center py-3">© 2020 Copyright:
