--- a/about_usGr.html
+++ b/about_usGr.html
@@ -92,7 +92,7 @@
 		</div>
 		
 		<div class="col-md-10" >
-			<h5 id="alignCenter"><b><i>"Είμαστε ένας μη κερδοσκοπικός οργανισμός και προσπαθούμε να συλλέξουμε πόρους για ανρθώπους που βρίσκονται σε ανάγκη!"</i></b></h5>
+			<h5 id="alignCenter"><b><i>"Είμαστε ένας μη κερδοσκοπικός οργανισμός και προσπαθούμε να συλλέξουμε πόρους για ανθρώπους που βρίσκονται σε ανάγκη!"</i></b></h5>
 			<div>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ac ligula luctus, varius enim id, vestibulum nisi. Phasellus blandit ligula sed leo fringilla, nec lobortis neque sagittis. Nulla nisl ipsum, varius a consequat sed, mollis et justo. Sed rhoncus eros ac mollis dapibus. Mauris sed posuere ex. Pellentesque vulputate, leo at sodales volutpat, odio metus tristique lacus, vel finibus elit lorem vel nibh. Cras aliquam tortor felis, eu eleifend purus molestie et.
 					Ut commodo commodo rhoncus. Pellentesque erat sem, pretium non rutrum ac, eleifend quis est. Mauris viverra elementum ex, nec semper urna blandit in. Mauris euismod sagittis nulla. Pellentesque eu maximus ante. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus gravida velit a facilisis tincidunt. Suspendisse viverra pulvinar tincidunt. Praesent ullamcorper faucibus nibh, id bibendum neque. Cras porttitor ipsum eget blandit dignissim. Sed eget nisi viverra, pretium leo tempus, malesuada turpis. In hac habitasse platea dictumst. In mi odio, pulvinar sit amet nulla eu, pellentesque varius justo. Sed lacinia fermentum ipsum quis pharetra.
