--- a/donation_pageGr.html
+++ b/donation_pageGr.html
@@ -126,7 +126,7 @@
           </div>
           <div class="form-row">
             <div class="col-md-6 mb-3">
-              <label for="validationCustom03">Iban</label>
+              <label for="validationCustom03">IΒΑΝ</label>
               <input type="text" class="form-control" id="validationCustom03" required>
               <div class="invalid-feedback">
                 Please provide a valid city.
@@ -157,6 +157,7 @@
               </div>
             </div>
         </div>
+        <br>
         <button class="btn btn-primary" type="submit">Υποβολή
         </form>
           <script>
@@ -179,7 +180,23 @@
             }, false);
           })();
           </script>
-		</div>
+    </div>
+    <div class="row align-items-center">
+      <div class="offset-4">
+      </div> 
+      <div class="col-md-4">
+        <br>
+        <p id="alignCenter"><b>Εναλλακτικά</b></p>
+        <br>
+        <div id="alignCenter">
+          <a href="https://www.paypal.com/us/home"><img src="https://www.paypalobjects.com/webstatic/en_US/i/buttons/PP_logo_h_200x51.png"/></a>
+        </div>
+        <br>
+        <br>
+      </div>
+      <div class="offset-4">
+      </div>
+    </div>
     <div class="row" id="footer">
       <div class="col-md-12">
         <div class="footer-copyright text-center py-3">© 2020 Copyright:
